<resources>
    <string name="app_name">KimuCalc</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parenthesis">()</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>

    <string name="backspace"> </string>

    <string name="display">Enter in a value</string>
    ///kimunote
    <string name="kimunote">Kimunote</string>
    <string name="Name">Name of Bank</string>
    <string name="iamount">i-Amount</string>
    <string name="sdate">Start-Date</string>
    <string name="mdate">m-date</string>
    <string name="mAmount">M-amount</string>
    <string name="name1">FD-1</string>
    <string name="name2">FD-2</string>
    <string name="name3">FD-3</string>
    <string name="name4">FD-4</string>
    <string name="name5">FD-5</string>

    <string name="save">Save</string>


</resources>